--- a/login.html
+++ b/login.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <h1>Login</h1>
     <hr><form action=""></form>
+    <div><br>
+    <h1>Login</h1>
+    <br><br>
+    <br><br>
+    <label class="l1" for="Usuario">Usuario</label><br>
+    <input class="i1" type="text">
+    <br><br>
+    <br><br>
+    <label class="l1">Senha</label><br>
+    <input class="i1" type="text">
+    <br><br>
+    <br><br>
+    <input id="ib" type="submit" value="login">
+    <li><a href="esqueceu-a-senha.html">esqueceu a senha?</a></li>
+    </div>
 </body>
 </html>
