inicio.busca.html

--- a/busca.html
+++ b/busca.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Busca</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="busca.css">
 </head>
 <body>
     <h1>Busca</h1>
-    <hr><form action=""></form>
+    <hr><form action="">
+    <div id="busca">
+    <label for="busca"></label>
+    <input id="barrapesquisa" type="text" placeholder="search..." >
+        <button type="submit"> <i class=""></i></button>
+    </form>
+    </div>
+
+    
 </body>
 </html>
