--- a/filtro.html
+++ b/filtro.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filtro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="filtro.css">
 </head>
 <body>
     <h1>Filtro</h1>
     <hr><form action=""></form>
+    
 </body>
-</html>
+</html><h1>NeymR É DIVULGADO OFICILAMENTE NO CLUME ESPANHOL BARCELONA,EMPRENSA RRECLAMA POR SUA FALTA DE EXPLICAÇAO SORE O ASSUNTO AIN OBRUUUUU APELAO</h1>
