--- a/login.html
+++ b/login.html
@@ -18,11 +18,12 @@
     <br><br>
     <br><br>
     <label class="l1">Senha</label><br>
-    <input class="i1" type="text">
+    <input class="i1" type="password">
     <br><br>
     <br><br>
     <input id="ib" type="submit" value="login">
     <li><a href="esqueceu-a-senha.html">esqueceu a senha?</a></li>
     </div>
+    <div id="div2"></div>
 </body>
 </html>
