--- a/busca.html
+++ b/busca.html
@@ -11,10 +11,11 @@
     <hr><form action="">
     <div id="busca">
     <label for="busca"></label>
-    <input id="barrapesquisa" type="text" placeholder="search..." >
-        <button type="submit"> <i class=""></i></button>
+    <input id="barrapesquisa" type="search" placeholder="search..." >
+    <input id="imgg" type="image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWshZCn3KqkBS75NQFkY3Erz0JIxoDbuwmTVy_0gERiGxfygD2n6ROcrEaPOmbEoBuYrI&usqp=CAU" alt="">
     </form>
     </div>
+    
 
     
 </body>
