--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Cadastro de pessoas</h1>
-    <hr><form action="">
+    <hr>
+    <div><form action="">
+        <br>
+        <br>
         <label for="nome">Nome completo</label><br>
         <input type="text"><br>
         <label for="datanascimento">Data de nascimento</label><br>
@@ -46,7 +49,7 @@
         <input type="text" name="cidade" id="cidade"><br>
         <label for="Cadastrar"></label><br>
         <input type="submit" value="Cadastrar" >
-        
+        </div>
     </form>
 </body>
 </html>
