--- a/cad-pessoa.html
+++ b/cad-pessoa.html
@@ -46,9 +46,11 @@
             <option value="Rondônia">Rondônia</option>
         </select><br>
         <label for="cidade">Cidade</label><br>
-        <input type="text" name="cidade" id="cidade"><br>
+        <select name="cidade" id="cidade">
+            <option value="Porto Alegre">Porto Alegre</option>
+        </select><br>
         <label for="Cadastrar"></label><br>
-        <input type="submit" value="Cadastrar" >
+        <input id="cadastrar" type="submit" value="Cadastrar" >
         </div>
     </form>
 </body>
