--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
     <input class="i1" type="password">
     <br><br>
     <br><br>
+    <label  for="login"></label>
     <input id="ib" type="submit" value="login">
     <li><a href="esqueceu-a-senha.html">esqueceu a senha?</a></li>
     </div>
